[package]
name = "gvltctl"
version = "0.1.3-pre"
edition = "2021"
authors = ["Gevulot Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/gevulotnetwork/gvltctl"
description = "Gevulot Control CLI"

[dependencies]
gevulot-rs = "0.1.3-pre.3"

bip32 = "0.5.1"
clap = { version = "4", features = ["env", "cargo", "string"] }
clap_complete = "4.5.13"
cosmrs = "0.20"
env_logger = "0.11.5"
rand_core = "0.6.4"
shadow-rs = "0.36"
serde = "1"
serde_json = "1"
serde_yaml = "0.9.34"
tokio = { version = "1", features = ["full"] }
toml = "0.8.19"
openssl = { version = "*", optional = true }

[build-dependencies]
shadow-rs = "0.36"

[features]
# This feature should be enabled when building static executable
openssl-vendored = ["openssl/vendored"]

[target.'cfg(target_os = "linux")'.dependencies]
mia-installer = { git = "https://github.com/gevulotnetwork/mia.git", tag = "mia-installer-0.2.5"}

anyhow = "1"
log = "0.4.22"
num_cpus = "1.16.0"
oci-spec = "0.7.0"
tempdir = "0.3.7"
thiserror = "1"
