[package]
name = "gvltctl"
version = "0.1.3"
edition = "2021"
authors = ["Gevulot Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/gevulotnetwork/gvltctl"
description = "Gevulot Control CLI"

[dependencies]
gevulot-rs = "0.1.3"

bip32 = "0.5.1"
cargo_metadata = "0.19"
clap = { version = "4", features = ["derive", "env", "string"] }
clap_complete = "4.5.13"
cosmrs = "0.20"
downloader = "0.2"
env_logger = "0.11.5"
patharg = "0.4"
rand_core = "0.6.4"
shadow-rs = { version = "0.36", features = ["metadata"] }
serde = "1"
serde_json = "1"
serde_yaml = "0.9.34"
tokio = { version = "1", features = ["full"] }
toml = "0.8.19"
openssl = { version = "*", optional = true }
which = "7"

# Linux VM builder dependencies
mia-installer = { git = "https://github.com/gevulotnetwork/mia.git", tag = "mia-installer-0.2.5" }

anyhow = "1"
log = "0.4.22"
num_cpus = "1.16.0"
oci-spec = "0.7.0"
tempdir = "0.3.7"
thiserror = "1"

# Linux VM builder v2 dependencies
backhand = { version = "0.20", optional = true, default-features = false, features = ["xz"] }
bytesize = { version = "1", optional = true }
directories = { version = "5", optional = true }
fatfs = { version = "0.3", optional = true }
fscommon = { version = "0.1", optional = true }
fs_extra = { version = "1", optional = true }
tar = { version = "0.4", optional = true }
mbrman = { version = "0.5", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
# This is here to clear libz-sys features and avoid compilation errors.
# `backhand` sets experimental feature which seems to be not supported on MacOS.
libz-sys = "1"

[build-dependencies]
shadow-rs = { version = "0.36", features = ["metadata"] }

[features]
# This feature should be enabled when building static executable
openssl-vendored = ["openssl/vendored"]
# Use new version of Linux VM builder (unstable)
vm-builder-v2 = [
    "dep:backhand",
    "dep:bytesize",
    "dep:directories",
    "dep:fatfs",
    "dep:fscommon",
    "dep:fs_extra",
    "dep:tar",
    "dep:mbrman",
]

[patch.crates-io]
gevulot-rs = { git = "https://github.com/gevulotnetwork/gevulot-rs", rev = "9aad7a9cbea15e9007ff5b45a566212bdf853620" }
