[package]
name = "gvltctl"
version = "0.1.3"
edition = "2021"
authors = ["Gevulot Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/gevulotnetwork/gvltctl"
description = "Gevulot Control CLI"

[dependencies]
gevulot-rs = "0.3.0"

bip32 = "0.5.1"
clap = { version = "4", features = ["derive", "env", "string"] }
clap_complete = "4.5.13"
cosmrs = "0.20"
downloader = "0.2"
env_logger = "0.11.5"
patharg = "0.4"
rand_core = "0.6.4"
shadow-rs = { version = "1", features = ["metadata"] }
serde = "1"
serde_json = "1"
serde_yaml = "0.9.34"
tokio = { version = "1", features = ["full"] }
toml = "0.8.19"
openssl = { version = "*", optional = true }
which = "7"

# Linux VM builder dependencies
mia-installer = { git = "https://github.com/gevulotnetwork/mia.git", tag = "mia-installer-0.3.0" }

anyhow = "1"
backhand = { version = "0.20", default-features = false, features = ["xz"] }
base64 = "0.22"
bytesize = "1"
crc = "3"
directories = "5"
fatfs = "0.3"
fscommon = "0.1"
fs_extra = "1"
log = "0.4"
mbrman = "0.5"
num_cpus = "1.16"
oci-spec = "0.7"
tar = "0.4"
tempdir = "0.3"
thiserror = "1"

[target.'cfg(target_os = "macos")'.dependencies]
# This is here to clear libz-sys features and avoid compilation errors.
# `backhand` sets experimental feature which seems to be not supported on MacOS.
libz-sys = "1"

[build-dependencies]
shadow-rs = { version = "1", features = ["metadata"] }

[features]
# This feature should be enabled when building static executable
openssl-vendored = ["openssl/vendored"]

[dev-dependencies]
minilsof = "0.1"
